parseInput was implemented

--- a/12d/package.yaml
+++ b/12d/package.yaml
@@ -4,6 +4,7 @@ version:             0.1.0.0
 dependencies:
 # lts/20/2.yaml
 - base == 4.16.4.0
+- unordered-containers == 0.2.19.1
 
 ghc-options:
 - -threaded
